--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: product-api           # set this to your Amazon ECR repository name
   ECS_SERVICE: product-api-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: product-api-dev                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: arn:aws:ecs:eu-north-1:529088297680:task-definition/e-commerce:2 # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: .github/ecs/task-definition.json # set this to the path to your Amazon ECS task definition
   # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: product-api-container           # set this to the name of the container in the
   # containerDefinitions section of your task definition
@@ -60,7 +60,7 @@ jobs:
           distribution: 'corretto'
 
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn clean package -DskipTests
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
